Update pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 exclude: |
   (?x)^(
-    README.md
+    code/datafactory/.*|
+    sc4-dev-df001/.*
   )$
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
