--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - "**.tf"
       - "code/infra/**"
+      - "code/datamodel/**"
       - "config/**"
       - ".github/workflows/terraform.yml"
       - ".github/workflows/_terraformEnvironmentTemplate.yml"
@@ -16,6 +17,7 @@ on:
     paths:
       - "**.tf"
       - "code/infra/**"
+      - "code/datamodel/**"
       - "config/**"
       - ".github/workflows/terraform.yml"
       - ".github/workflows/_terraformEnvironmentTemplate.yml"
