Update concurrency groups

--- a/.github/workflows/_terraformEnvironmentTemplate.yml
+++ b/.github/workflows/_terraformEnvironmentTemplate.yml
@@ -98,7 +98,7 @@ jobs:
     environment: ${{ inputs.environment }}
     needs: [lint]
     concurrency:
-      group: terraform-apply-${{ inputs.config }}-${{ inputs.environment }}
+      group: terraform-${{ inputs.config }}-${{ inputs.environment }}
       cancel-in-progress: false
 
     env:
@@ -202,7 +202,7 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'release'
     needs: [plan]
     concurrency:
-      group: terraform-apply-${{ inputs.config }}-${{ inputs.environment }}
+      group: terraform-${{ inputs.config }}-${{ inputs.environment }}
       cancel-in-progress: false
 
     env:
