Add destroy workflow and update TF version

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,23 @@ jobs:
     with:
       environment: "dev"
       config: "SharedTenant"
-      terraform_version: "1.9.1"
+      terraform_version: "1.9.5"
+      node_version: 20
+      working_directory: "./code/infra"
+      tenant_id: "572cf1ec-3f90-49a2-896f-ab2fa36ca0d3"
+      subscription_id: "be25820a-df86-4794-9e95-6a45cd5c0941"
+    secrets:
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+
+  terraform_dev_destroy:
+    uses: ./.github/workflows/_terraformDestroyTemplate.yml
+    name: "Dev Destroy"
+    needs: [terraform_dev]
+    with:
+      environment: "dev"
+      config: "SharedTenant"
+      terraform_version: "1.9.5"
       node_version: 20
       working_directory: "./code/infra"
       tenant_id: "572cf1ec-3f90-49a2-896f-ab2fa36ca0d3"
